# RustAegis-vm-macro

./: Cargo.toml  LICENSE  README.md
src/: anti_analysis.rs  compiler.rs  crypto.rs  integrity.rs  lib.rs  mba.rs  opcodes.rs  polymorphic.rs  string_obfuscation.rs  substitution.rs  value_cryptor.rs
src/compiler/: array.rs  cast.rs  control.rs  emit.rs  expr.rs  literal.rs  method.rs  mod.rs  native_call.rs  stmt.rs
src/whitebox/: cipher.rs  generator.rs  mod.rs  sbox.rs  tables.rs
